# trt_profiler

./: .gitignore  README.md  pyproject.toml
docs/: README.md  application_spec.md  design.md  tutorial_user_model.md  uml.md
examples/squeezenet/: README.md  config.yaml  config_full_variants.yaml  config_image_ort_openvino.yaml  config_ort_openvino.yaml  config_ort_trt_fp32.yaml  config_postprocess.yaml  config_simple.yaml  config_trt_fp32_fp16.yaml  config_video_ort_openvino.yaml  prepare_assets.py
examples/squeezenet/reports_image_ort_openvino/: report.json
examples/squeezenet/reports_ort_openvino/: report.json
examples/squeezenet/reports_video_ort_openvino/: report.json
tests/: test_classification_metrics.py  test_csv_reporter.py  test_dash_app.py  test_detection_metrics.py  test_feature_map_diff.py  test_mapping.py  test_pipeline.py  test_plotly_dashboard.py  test_simple_config.py  test_tensor_diff.py  test_tensorrt_runner.py
trt_profiler/: __init__.py  cli.py
trt_profiler/builders/: __init__.py  base.py  onnx_passthrough.py  openvino.py  tensorrt.py
trt_profiler/config/: builder.py  loader.py  parser.py  presets.py  schema.py  simple.py  validation.py
trt_profiler/core/: __init__.py  class_loader.py  factory.py  pipeline.py  registry.py  types.py
trt_profiler/data/: base.py  image_loader.py  manifest_loader.py  npz_loader.py  video_loader.py
trt_profiler/evaluators/: evaluator.py  post_evaluator.py  raw_evaluator.py
trt_profiler/mapping/: __init__.py  input_mapper.py  output_mapper.py
trt_profiler/metrics/: base.py  classification.py  detection.py  feature_map_diff.py  tensor_diff.py
trt_profiler/postprocessors/: __init__.py  base.py  classification.py  identity.py
trt_profiler/preprocessors/: __init__.py  base.py  image.py  npz.py
trt_profiler/report/: csv_reporter.py  dash_app.py  data_builder.py  json_reporter.py  loader.py  plotly_dashboard.py
trt_profiler/runners/: __init__.py  base.py  identity.py  onnxruntime.py  openvino.py  tensorrt.py
trt_profiler/utils/: import_utils.py  logging.py  numpy.py  path.py
